# project-LangChain-rag-v1

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
app/: __init__.py  main.py
app/api/: deps.py  router.py
app/api/routes/: chat.py  feedback.py  health.py
app/core/: __init__.py  config.py  logging.py  telemetry.py
app/models/: schemas.py
app/services/: embeddings.py  feedback_service.py  knowledge_base.py  prompting.py  rag_service.py
app/static/: app.js  index.html  styles.css
data/knowledge/: 01_industrial_assembly.md  02_logistics_warehouse.md  03_service_and_rehabilitation.md  04_future_demand.md
scripts/: rebuild_index.py  run_server.py
tests/: test_api.py  test_config.py  test_embeddings.py  test_feedback_service.py  test_prompting.py  test_rag_service.py
